assets/css/global.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  font-size: 1rem;
  font-family: 'Geologica', sans-serif;
  line-height: normal;
  color: #202020;
  background-color: #f8f8fa;
}
a {
  color: #202020;
  text-decoration: none;
}
img {
  vertical-align: middle;
  max-width: 100%;
}
picture {
  display: block;
}
figure {
  margin: 0;
}
input,
textarea,
button {
  font-family: inherit;
}
input:focus-visible {
  outline-color: #ffcc81;
}
.highlight {
  font-weight: 600;
  background-color: #ffcc81;
  border-radius: 1em;
  padding: 0 0.4em;
}
.always-portrait {
  aspect-ratio: 2 / 1;
  object-fit: cover;
  object-position: center;
}
.bold {
  font-weight: 700;
}
.semibold {
  font-weight: 600;
}
.container {
  margin-left: auto;
  margin-right: auto;
  padding: 0 20px;
}

@media (min-width: 500px) {
  .container {
    padding: 0 48px;
  }
}

@media (min-width: 1000px) {
  .container {
    padding: 0 133px;
  }
}
@media (min-width: 1920px) {
  .container {
    max-width: 1920px;
  }
}
.main {
  margin-left: auto;
  margin-right: auto;
  padding: 0 20px;
}

@media (min-width: 500px) {
  .main {
    padding: 0 48px;
  }
}

@media (min-width: 1000px) {
  .main {
    padding: 0 133px;
  }
}
@media (min-width: 1920px) {
  .main {
    max-width: 1920px;
  }
}
.visually-hidden {
  display: none !important;
}
[hidden] {
  display: none !important;
}

